...
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/song_icon">

            <!-- Play button -->
            <ImageButton
                android:id="@+id/play_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="@string/play_description"
                android:scaleType="centerInside"
                android:src="@drawable/ic_play_song" />
...
            <Space
                android:layout_width="32dp"
                android:layout_height="match_parent" />

            <!-- Stop button -->
            <ImageButton
                android:id="@+id/stop_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="@string/stop_description"
                android:scaleType="centerInside"
                android:src="@drawable/ic_stop_song" />
...
