...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="64dp"
                    android:layout_marginTop="48dp"
                    android:background="@drawable/rounded_border"
                    android:iconifiedByDefault="false"
...
