...
    <item
        android:id="@+id/favourite"
        android:icon="@drawable/ic_star"
        android:title="" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_user"
        android:title="" />

</menu>

