<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logoPequeno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/inputs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:minWidth="250dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoPequeno">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/username_tv"
                android:text="@string/signup_username_title" />

            <!-- Username input -->
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:autofillHints="username"
                android:background="@drawable/rounded_border"
                android:fontFamily="sans-serif"
                android:inputType="textAutoComplete"
                android:paddingHorizontal="12dp"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/username"
                android:text="@string/Surname" />

            <!-- UserSurname input -->
            <EditText
                android:id="@+id/usersurname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:autofillHints="username"
                android:background="@drawable/rounded_border"
                android:fontFamily="sans-serif"
                android:inputType="textAutoComplete"
                android:paddingHorizontal="12dp"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/username"
                android:text="@string/Email" />

            <!-- UserSurname input -->
            <EditText
                android:id="@+id/usermail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:autofillHints="usermail"
                android:background="@drawable/rounded_border"
                android:fontFamily="sans-serif"
                android:inputType="textAutoComplete"
                android:paddingHorizontal="12dp"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/username"
                android:text="@string/login_password_title" />

            <!-- UserSurname input -->
            <EditText
                android:id="@+id/userpassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:autofillHints="userpassword"
                android:background="@drawable/rounded_border"
                android:fontFamily="sans-serif"
                android:inputType="textPassword"
                android:paddingHorizontal="12dp"
                android:textSize="18sp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/rounded_border"
            android:backgroundTint="@color/blue"
            android:text="@string/CreateAccountSignUp"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputs" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
